fixed the gap in the questions section

--- a/css/style.css
+++ b/css/style.css
@@ -851,12 +851,14 @@ width: 14.7%;
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
-
+#shift-left{
+  margin-left: -11px;
+}
 .hide{
   transform: scale(0);
   width:0;
   padding:0;
-  display: none;
+  display: hidden;
   /*-webkit-transition: width 2s, height 4s;*/
   transition: all 0.2s ease-in-out;
 }
